versioned_docs/version-1.3.0-beta/commands/oras_manifest_fetch-config.mdx
---
title: oras manifest fetch-config
sidebar_position: 120
warning: Do NOT modify this generated file
---

# oras manifest fetch-config

Fetch the config of a manifest from a registry or an OCI image layout

```bash
oras manifest fetch-config [flags] <name>{:<tag>|@<digest>}
```

## Examples

Fetch the config:

```bash
oras manifest fetch-config localhost:5000/hello:v1
```

Fetch the config of certain platform:

```bash
oras manifest fetch-config --platform 'linux/arm/v5' localhost:5000/hello:v1
```

Fetch and print the prettified config:

```bash
oras manifest fetch-config --pretty localhost:5000/hello:v1
```

Fetch the config and save it to a local file:

```bash
oras manifest fetch-config --output config.json localhost:5000/hello:v1
```

Fetch the descriptor of the config:

```bash
oras manifest fetch-config --descriptor localhost:5000/hello:v1
```

Fetch and print the prettified descriptor of the config:

```bash
oras manifest fetch-config --descriptor --pretty localhost:5000/hello:v1
```

## Options

```
      --ca-file string                              server certificate authority file for the remote registry
      --cert-file string                            client certificate file for the remote registry
  -d, --debug                                       output debug logs (implies --no-tty)
      --descriptor                                  output the descriptor
  -H, --header stringArray                          add custom headers to requests
  -h, --help                                        help for fetch-config
      --identity-token string                       registry identity token
      --identity-token-stdin                        read identity token from stdin
      --insecure                                    allow connections to SSL registry without certs
      --key-file string                             client private key file for the remote registry
      --no-tty                                      [Preview] do not show progress output
      --oci-layout                                  set target as an OCI image layout
      --oci-layout-path string                      [Experimental] set the path for the OCI image layout target
  -o, --output path                                 file path to write the fetched config to, use - for stdout
  -p, --password string                             registry password or identity token
      --password-stdin                              read password from stdin
      --plain-http                                  allow insecure connections to registry without SSL check
      --platform os[/arch][/variant][:os_version]   request platform in the form of os[/arch][/variant][:os_version]
      --pretty                                      prettify JSON objects printed to stdout
      --registry-config path                        path of the authentication file for registry
      --resolve host:port:address[:address_port]    customized DNS for registry, formatted in host:port:address[:address_port]
  -u, --username string                             registry username
```
